correctly display bg img using inline css object

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+body{
+  background-image: url("./../img/fizz.jpeg");
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
